2000-06-09  Kenichi Handa  <handa@etl.go.jp>

	* ps-mule.el (ps-mule-font-info-database-bdf): Prefer the font
	"tib24p-mule.bdf" for Tibetan.

	* composite.el (decompose-composite-char): Declare it as obsolete.

	* man.el (Man-fontify-manpage): Pay attention to overstrike
	pattern for CJK characters (X^H^HX).

2000-06-08  Gerd Moellmann  <gerd@gnu.org>

	* thingatpt.el (forward-thing): Use functionp instead of fboundp.
	Set maintainer to FSF since author isn't reachable.

2000-06-08  Dave Love  <fx@gnu.org>

	* international/mule-cmds.el (select-safe-coding-system): If
	DEFAULT-CODING-SYSTEM is not specified, also check the most
	preferred coding-system if buffer-file-coding-system is
	`undecided'.  From Handa.

2000-06-08  Kenichi Handa  <handa@etl.go.jp>

	* international/mule.el
	(after-insert-file-set-buffer-file-coding-system): If the buffer
	size is greater than INSERTED, judget that we are not visiting.

2000-06-07  Rajesh Vaidheeswarran  <rv@gnu.org>

	* whitespace.el (defgroup whitespace): Comment out `:version'.
	XEmacs 20.4 has problems defining the group with this present.
	We'll have this commented out till get resolve the problem.

2000-06-07  Gerd Moellmann  <gerd@gnu.org>

	* align.el: Update from author.

2000-06-07  Jari Aalto  <jari.aalto@poboxes.com>

	* apropos.el (apropos-mode-hook): New user variable.
	(apropos-mode): Run apropos-mode-hook.

2000-06-07  David Ponce  <david@dponce.com>

	* recentf.el: Fixed recentf-edit-list and recentf-open-more-files
	commands.  Require `wid-edit' at run-time.

2000-06-07  David Ponce  <david@dponce.com>

	* recentf.el: Added some "Commentary".
	(recentf-open-more-files, recentf-edit-list): Minor changes to
	move the point at the top of the file list.  This behaviour is
	consistent with the menu one when the list contains a lot of
	files.
	(recentf-cleanup): Now displays the number of items removed from
	the list.
	(recentf-relative-filter) New menu filter to show filenames
	relative to `default-directory'.
