@@ -1,3 +1,14 @@
+2000-06-09  Dave Love  <fx@gnu.org>
+
+	* executable.el: Byte compile dynamic.
+	(executable-insert): Change custom type.
+	(executable-find): Add autoload cookie.
+	(make-buffer-file-executable-if-script-p): New function.  From
+	Noah Friedman.
+
+	* files.el (after-save-hook): Customize, with
+	make-buffer-file-executable-if-script-p as an option.
+
 2000-06-09  Kenichi Handa  <handa@etl.go.jp>
 
 	* ps-mule.el (ps-mule-font-info-database-bdf): Prefer the font
